[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/npc.gd" type="Script" id=1]
[ext_resource path="res://player_prot.png" type="Texture" id=2]
[ext_resource path="res://resources/Sprechblase1.png" type="Texture" id=3]
[ext_resource path="res://resources/Sprechblase2.png" type="Texture" id=4]
[ext_resource path="res://resources/Sprechblase3.png" type="Texture" id=5]
[ext_resource path="res://resources/Sprechblase4.png" type="Texture" id=6]
[ext_resource path="res://resources/Sprechblase5.png" type="Texture" id=7]
[ext_resource path="res://resources/Sprechblase6.png" type="Texture" id=8]
[ext_resource path="res://resources/Sprechblase7.png" type="Texture" id=9]

[sub_resource type="CircleShape2D" id=1]

radius = 93.0529

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[node name="Node2D" type="Node2D"]

[node name="Area2D" type="Area2D" parent="."]
script = ExtResource( 1 )
wanted_item = "test"

[node name="player_prot" type="Sprite" parent="Area2D"]
scale = Vector2( 0.0636593, 0.0636593 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Area2D"]
visible = false
position = Vector2( 103.352, -129.852 )
scale = Vector2( 0.156332, 0.156332 )
frames = SubResource( 2 )

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_Area2D_body_exited"]
